# trailblaze

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  DesignChoices.md  README.md  Roadmap.md  trailblazeConfig.cmake
cmake/: version.cmake
cmake/toolchains/: msvc-ninja.cmake
docs/: Doxyfile.in
example/: CMakeLists.txt  how_to_use.cpp
example/generate/: CMakeLists.txt  generator_example.cpp
example/logging/: CMakeLists.txt  custom_logger.h  logging_example.cpp
example/plot/: CMakeLists.txt  matplotlib_example.cpp
include/trailblaze/: alg_geometry.h  alg_resample.h  annotate.h  array_of_struct_storage.h  component_access.h  components.h  constants.h  generate.h  interpolation.h  interpolation_composition.h  interval.h  logging.h  path.h  position_view2d.h  position_view3d.h  quaternion.h  sampling.h  segments_view.h  space_o3.h  space_r2.h  space_r3.h  space_se2.h  space_se3.h  span.h  state_space.h  state_traits.h  traits.h  type_traits.h  util.h  version.h
include/trailblaze/algorithm/: annotate.h  geometry.h  resample.h
include/trailblaze/backport/: numbers.h  span.h
include/trailblaze/detail/: state_traits.h  traits.h  type_traits.h
include/trailblaze/log/: config.h  fmt_api.h  global.h  level.h  null_logger.h  source_location.h  stream_api.h
include/trailblaze/log/detail/: detect.h
include/trailblaze/math/: angle.h  interpolation.h  numbers.h  util.h
include/trailblaze/metrics/: euclidean_distance.h  quaternion_distance.h
include/trailblaze/plot/: matplotlib_renderer.h  plot_api.h  primitives.h  renderer.h  scene.h  scene_builders.h  scene_options.h
include/trailblaze/state_spaces/: state_space_o3.h  state_space_r2.h  state_space_r3.h  state_space_se2.h  state_space_se3.h
log/: level.h
scripts/: format_all.ps1  format_all.sh  setup-msvc.ps1
src/: hello.cpp
test/: CMakeLists.txt  common.h  example_test.cpp  test_angle.cpp  test_interpolation.cpp  test_metrics.cpp  test_quaternion.cpp  test_state_space_o3.cpp  test_state_space_r2.cpp  test_state_space_r3.cpp  test_state_space_se2.cpp  test_util.cpp
